# plugin-talk

./: .gitignore  README.md  pyproject.toml
plans/001-mvp/: execution-summary.md
plugin_talk/: __init__.py  bridge.py  elevenlabs.py  luna-plugin.toml  routes.py  state.py
plugin_talk/ui/settings/: index.html
plugin_talk/ui/widgets/talk/: index.html
tests/: conftest.py  test_bridge.py  test_live_elevenlabs.py  test_manifest.py  test_routes_dojo.py
