[project]
name = "plugin-talk"
version = "0.1.6"
description = "Talk to Luna by voice in the browser — ElevenLabs Agents front-end, Luna stays the brain."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "fastapi", "uvicorn"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugin_talk"]

[tool.setuptools.package-data]
plugin_talk = ["luna-plugin.toml", "ui/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
